--- a/backend/web/static/css/site.css
+++ b/backend/web/static/css/site.css
@@ -126,3 +126,25 @@ html,body{height: 100%}
     -webkit-transform: scale(1.0);
   }
 }
+
+/*登录页面的动画*/
+.canvas-wrap #canvas{
+  width:100%;
+  height: 100%;
+  overflow: hidden;
+  position:absolute;
+  top:0;
+  left:0;
+  background-color: #1a1724;               
+}
+.canvas-wrap{
+  position:relative;
+  height: 100%;
+}
+.canvas-wrap div.canvas-content{
+  position:relative;
+  z-index:2000;
+  color:#fff;
+  text-align:center;
+  padding-top:30px;
+}
