--- a/backend/web/static/css/site.css
+++ b/backend/web/static/css/site.css
@@ -180,31 +180,50 @@ html,body{height: 100%}
 }
 
 
+.sly-tab > .nav-tabs-custom > .nav-tabs {
+  display: block; 
+  right: 100%;
+  height: 100%;
+  width: 100%;
+  white-space: nowrap;
+}
 .sly-tab > .nav-tabs-custom > .nav-tabs > li {
+  cursor:pointer;
   margin: 0;
   border-top: 0;
+  margin-bottom: -2px;
   border-bottom: 3px solid transparent;
+  height: 100%;
 }
-
-.sly-tab > .nav-tabs-custom > .nav-tabs > li > a > .tab-icon {
+.sly-tab > .nav-tabs-custom > .nav-tabs > li > a {
+  white-space: nowrap;
+  padding: 10px;
+}
+.sly-tab > .nav-tabs-custom > .nav-tabs > li > a > span > .tab-icon {
   margin-right: 2px;
   color: #999;
 }
-.sly-tab > .nav-tabs-custom > .nav-tabs > li.active > a > .tab-icon {
+.sly-tab > .nav-tabs-custom > .nav-tabs > li.active > a > span > .tab-icon {
   margin-right: 2px;
   color: #666;
+}
+
+.nav-tabs-custom > .nav-tabs > li:hover > a {
+  color: #000;
+}
+
+.sly-tab > .nav-tabs-custom > .nav-tabs > li.tab-warn > a > span,
+.sly-tab > .nav-tabs-custom > .nav-tabs > li.tab-warn > a > span > .tab-icon {
+  color: #dd4b39;
 }
 
 .sly-tab > .nav-tabs-custom > .nav-tabs > li > a > .tab-close {
   margin-left: 8px;
   color: #CCC;
 }
+
 .sly-tab > .nav-tabs-custom > .nav-tabs > li > a > .tab-close:hover{
   color: #999;
-}
-
-.nav-tabs-custom > .nav-tabs > li:hover > a {
-  color: #000;
 }
 
 .sly-tab > .nav-tabs-custom > .nav-tabs > li.active {
@@ -229,4 +248,10 @@ html,body{height: 100%}
 }
 .sly-tab > .nav-tabs-custom.tab-default > .nav-tabs > li.active {
   border-bottom-color: #d2d6de;
+}
+
+.content-iframe > iframe {
+  width: 100%;
+  height: 100%;
+  border: none;
 }
