--- a/backend/web/static/css/site.css
+++ b/backend/web/static/css/site.css
@@ -252,3 +252,20 @@ html,body{height: 100%}
   height: 100%;
   border: none;
 }
+/* tab end */
+
+.mr-b-10 { margin-bottom: 10px;}
+.mr-t-6 { margin-top: 6px;}
+
+.form-body {
+  margin-bottom: 55px;
+}
+/* form */
+.form-footer {
+  position:fixed;
+  bottom:0;
+  width: 100%;
+  border-top: 1px solid #f4f4f4;
+  background: #fff;
+  padding: 10px;
+}
