--- a/backend/web/static/css/site.css
+++ b/backend/web/static/css/site.css
@@ -190,3 +190,86 @@ html,body{height: 100%}
 .layui-layer-content iframe{
   height: 100% !important;
 }
+
+/*标题样式*/
+.content-header h4.content-header-title{
+  padding-left: 8px;
+  border-left: solid 4px #000;
+}
+/*.content-header i{
+  margin-right: 8px;
+}*/
+
+
+/*树形样式*/
+.switch-tree {
+    min-height:20px;
+    padding:0px 19px 19px 7px;
+    margin-bottom:20px;
+    -webkit-box-shadow:inset 0 1px 1px rgba(0, 0, 0, 0.05);
+    -moz-box-shadow:inset 0 1px 1px rgba(0, 0, 0, 0.05);
+    box-shadow:inset 0 1px 1px rgba(0, 0, 0, 0.05);
+}
+.switch-tree>ul {
+   margin-left: 5px !important;
+}
+.switch-tree ul {
+    padding: 0;
+    margin: 0 0 10px 25px;
+    margin-top: 0px;
+    margin-right: 0px;
+    margin-bottom: 10px;
+    margin-left: 25px;
+}
+.switch-tree li {
+    list-style-type:none;
+    margin:0;
+    padding:5px;
+    position:relative
+}
+.switch-tree li::before, .switch-tree li::after {
+    content:'';
+    left:-20px;
+    position:absolute;
+    right:auto
+}
+.switch-tree li::before {
+    border-left:1px dashed #999;
+    bottom:50px;
+    height:100%;
+    top:0;
+    width:1px
+}
+.switch-tree li::after {
+    border-top:1px dashed #999;
+    height:20px;
+    top:25px;
+    width:25px
+}
+.switch-tree li span {
+    -moz-border-radius:3px;
+    -webkit-border-radius:3px;
+    border-radius:3px;
+    display:inline-block;
+    padding:3px 8px;
+    text-decoration:none
+}
+.switch-tree li span.switch {
+   color:#0e76a8;
+   font-weight: 600;
+}
+.switch-tree li span.switch:hover {
+    cursor: pointer;
+}
+
+
+.switch-tree>ul>li::before, .switch-tree>ul>li::after {
+    border:0
+}
+.switch-tree li:last-child::before {
+    height:26px
+}
+.switch-tree label{
+    margin-right: 10px;
+}
+/*树形样式-end-*/
