--- a/backend/web/static/css/site.css
+++ b/backend/web/static/css/site.css
@@ -15,6 +15,40 @@ html,body{height: 100%}
 	width: 318px;
 }
 
+.navbar-logo {
+  display: none;
+}
+@media (max-width: 767px) {
+  .navbar-custom-menu{
+    position: fixed;
+    top: 0;
+    right: 0;
+  }
+  .navbar-logo{
+    display: block;
+    height: 50px;
+    padding-top: 2px;
+    color: #FFF;
+    font-size: 20px;
+    line-height: 50px;
+    text-align: center;
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  }
+  .navbar-logo img{
+    height: 45px;
+  }
+  .main-header .logo{
+    display: none;
+  }
+  .fixed .content-wrapper,
+  .fixed .right-side {
+    padding-top: 50px;
+  }
+  .main-sidebar {
+    padding-top: 50px;
+  }
+}
+
 .sidebar-menu{
   white-space: nowrap;
   cursor:pointer;
@@ -127,6 +161,10 @@ html,body{height: 100%}
   border-bottom-color: #d2d6de;
 }
 
+.content-iframe {
+  -webkit-overflow-scrolling: touch;
+  overflow-y: scroll;
+}
 .content-iframe > iframe {
   width: 100%;
   height: 100%;
